Archive/20a19294c5dd29f52b6ed4c6d687beef-6ff3a3d01094c4f046462633bce870fd/output
+ g++-4.8 -c -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In lambda function:
main.cpp:11:47: error: parameter packs not expanded with '...':
         thread_([=]{ start(std::forward<Args>(args)...); }) // capture by [=] required to ensure lifetime...?
                                               ^
main.cpp:11:47: note:         'args'
